syntax = "proto3";

package service_booking_manager.v1;

option go_package = "github.com/odihnx/service-booking-manager/gen/go/service_booking_manager/v1";

// import "common/v1/common.proto"; 

// ---------- GENERIC RESPONSE WRAPPER ----------
message GenericResponse {
  string transaction_id = 1; // Unique ID to identify the transaction
  string message = 2;
  ResponseStatus status = 3;
}

enum ResponseStatus {
  RESPONSE_STATUS_UNSPECIFIED = 0;
  RESPONSE_STATUS_OK = 1;
  RESPONSE_STATUS_ERROR = 2;
}

// ---------- ENUMS ----------
enum BookingStatus {
  BOOKING_STATUS_UNSPECIFIED = 0;
  BOOKING_STATUS_ACTIVE = 1;
  BOOKING_STATUS_EXPIRED = 2;
}

enum BookingGenerationResult {
  BOOKING_GENERATION_RESULT_UNSPECIFIED = 0;
  BOOKING_GENERATION_RESULT_RESERVATION_SUCCESS = 1;
  BOOKING_GENERATION_RESULT_RESERVATION_ERROR = 2;
}

enum OpenStatus {
  OPEN_STATUS_UNSPECIFIED = 0;
  OPEN_STATUS_RECEIVED = 1;
  OPEN_STATUS_REQUESTED = 2;
  OPEN_STATUS_EXECUTED = 3;
  OPEN_STATUS_ERROR = 4;
  OPEN_STATUS_SUCCESS = 5;
}

enum Sort {
  ASC = 0;
  DESC = 1;
}

// ---------- SERVICE ----------
service BookingService {
  rpc CheckBookingStatus(CheckBookingStatusRequest) returns (CheckBookingStatusResponse); //obtiene estado de una reserva
  rpc GetBookingHistory(GetBookingHistoryRequest) returns (GetBookingHistoryResponse); // obtiene historico paginado de reservas
  rpc GenerateBooking(GenerateBookingRequest) returns (GenerateBookingResponse); // genera reserva
  rpc ExecuteOpen(stream ExecuteOpenRequest) returns (stream ExecuteOpenResponse); // solicita apertura de locker
  rpc SetBookingTraceStatus(SetBookingTraceStatusRequest) returns (SetBookingTraceStatusResponse); // actualiza estado de trazabilidad apertura locker
  rpc ConfirmsOpeningExecution(ConfirmsOpeningExecutionRequest) returns (ConfirmsOpeningExecutionResponse); // confirma ejecucion de apertura de locker
  rpc GetDeviceBooking(DeviceBookingRequest) returns (DeviceBookingResponse); // lista reservas activas de un dispositivo
}

// ---------- CHECK BOOKING STATUS ----------
message CheckBookingStatusRequest {
  string service_name = 1;
  string current_code = 2;
}

message CheckBookingStatusResponse {
  BookingRecord booking = 1;
  GenericResponse response = 2;
}

// ---------- GET BOOKING HISTORY ----------
message GetBookingHistoryRequest {
  string service_name = 1;
  string device_id = 2;
  string email_recipient = 3;
  repeated string installations_name = 4;
  bool active_only = 5;
  int32 page = 6;
  int32 page_size = 7;
  string date_from = 8; // ISO 8601 format
  string date_until = 9; // ISO 8601 format
  string sort_by = 10; // sorting based on the indicated column
  Sort sort = 11; // sorting direction
}

message BookingRecord {
  int32 id = 1;
  int32 configuration_booking_id = 2;
  string init_booking = 3; // ISO 8601 format
  string finish_booking = 4;
  string installation_name = 5;
  int32 number_locker = 6;
  string device_id = 7;
  string current_code = 8;
  int32 openings = 9;
  string service_name = 10;
  string email_recipient = 11;
  string created_at = 12;
  string updated_at = 13;
}

message GetBookingHistoryResponse {
  BookingHistoryPage bookings = 1;
  GenericResponse response = 2;
}

message BookingHistoryPage {
  repeated BookingRecord bookings = 1;
  int32 total_count = 2;
  int32 current_page = 3;
  int32 total_pages = 4;
  int32 last_page = 5; // use -1 as "nil"
  int32 next_page = 6; // use -1 as "nil"
}

// ---------- GENERATE BOOKING ----------
message GenerateBookingRequest {
  string service_name = 1;
  optional int32 configuration_id = 2;
  string device_id = 3;
  string email_recipient = 4;
  string installation_name = 5;
  int32 number_locker = 6;
  optional string init_booking = 7; // ISO 8601
  oneof end_spec {
    string finish_booking = 8; // ISO 8601 (explicit end)
    Duration end_offset = 9;   // duration to calculate end
  }
}

message Duration {
  int32 value = 1;
  TimeUnit unit = 2;
}

enum TimeUnit {
  TIME_UNIT_UNSPECIFIED = 0;
  TIME_UNIT_HOURS = 1;
  TIME_UNIT_DAYS = 2;
  TIME_UNIT_WEEKS = 3;
}

message GenerateBookingResponse {
  BookingGenerationResponse booking = 1;
  GenericResponse response = 2;
}

message BookingGenerationResponse {
  BookingGenerationResult result = 1;
  BookingRecord bookings = 2;
}

// ---------- EXECUTE OPEN ----------
message ExecuteOpenRequest {
  string service_name = 1;
  string current_code = 2;
}

message ExecuteOpenResponse {
  OpenStatus status = 1;
  GenericResponse response = 2;
}

// ---------- SET BOOKING STATUS ----------
message SetBookingTraceStatusRequest {
  OpenStatus status = 1;
  string device_id = 2;
  int32 number_locker = 3;
}

message SetBookingTraceStatusResponse {
  GenericResponse response = 1;
}

// ---------- CONFIRMS OPENING EXECUTION ----------
message ConfirmsOpeningExecutionRequest {
  string device_id = 1;
  int32 number_locker = 2;
}

message ConfirmsOpeningExecutionResponse {
  GenericResponse response = 1;
}

// ---------- DEVICE BOOKING ----------
message DeviceBookingRequest {
  string device_id = 1;
  oneof end_spec {
    string service_name = 2;
    int32 configuration_id = 3;
  }
  string date_from = 4; // ISO 8601 format
}

message DeviceBookingResponse {
  GenericResponse response = 1;
  repeated BookingRecord bookings = 2;
}